--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react101",
   "version": "0.1.0",
-  "homepage": "https://github.com/cory-sydn/react-groceries-gh-deploy",
+  "homepage": "https://cory-sydn.github.io/react_groceries_gh_deploy",
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
